[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/SmallSprite/SmallSprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Ship/Ship.gd" type="Script" id=2]
[ext_resource path="res://scenes/Bullet/Bullet.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.52555, 8.14366 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.4853, 8.14366 )

[node name="Ship" type="Area2D"]
collision_mask = 8
script = ExtResource( 2 )
Bullet = ExtResource( 3 )

[node name="SingleShipSprite" parent="." instance=ExtResource( 1 )]
rotation = 1.5708
z_index = 1
z_as_relative = false

[node name="SingleShipCollShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BulletSpawnCenter" type="Position2D" parent="."]
position = Vector2( 0, -6.46146 )

[node name="DoubleShipSprite1" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( -8, 0 )
rotation = 1.5708
z_index = 1
z_as_relative = false

[node name="DoubleShipSprite2" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 8, 0 )
rotation = 1.5708
z_index = 1
z_as_relative = false

[node name="DoubleShipCollShape" type="CollisionShape2D" parent="."]
position = Vector2( 0.438137, 0 )
shape = SubResource( 2 )
disabled = true

[node name="BulletSpawnLeft" type="Position2D" parent="."]
position = Vector2( -7.96991, -6.34449 )

[node name="BulletSpawnRight" type="Position2D" parent="."]
position = Vector2( 8.14706, -6.27417 )
